fixed screenshot title and alignment of unread badges

--- a/public/play/demo/new.css
+++ b/public/play/demo/new.css
@@ -518,7 +518,7 @@ pre code {
   margin-right: 10px;
   padding-bottom: 2px;
   text-align: center;
-  margin-top: 2px;
+  margin-top: 4px;
 /*  color: #162e34;*/
   font-weight: 400;
   color: white;
